<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" android:id="@+id/root" android:layout_width="match_parent" android:layout_height="match_parent" android:background="@color/decan_black" tools:context=".MainActivity">
    <WebView android:id="@+id/webView" android:layout_width="match_parent" android:layout_height="match_parent" android:background="@color/decan_black" />
    <LinearLayout android:id="@+id/nativeBar" android:layout_width="match_parent" android:layout_height="58dp" android:layout_gravity="bottom" android:layout_marginStart="10dp" android:layout_marginEnd="10dp" android:layout_marginBottom="10dp" android:background="@drawable/bg_native_bar" android:elevation="12dp" android:gravity="center" android:orientation="horizontal" android:padding="6dp">
        <TextView android:id="@+id/homeButton" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:background="@drawable/bg_button" android:gravity="center" android:text="⌂  Home" android:textColor="@color/decan_white" android:textSize="12sp" android:clickable="true" android:focusable="true" />
        <TextView android:id="@+id/accountButton" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:layout_marginStart="5dp" android:background="@drawable/bg_button" android:gravity="center" android:text="◉  Account" android:textColor="@color/decan_white" android:textSize="12sp" android:clickable="true" android:focusable="true" />
        <TextView android:id="@+id/reloadButton" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:layout_marginStart="5dp" android:background="@drawable/bg_button" android:gravity="center" android:text="↻  Reload" android:textColor="@color/decan_white" android:textSize="12sp" android:clickable="true" android:focusable="true" />
        <TextView android:id="@+id/moreButton" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:layout_marginStart="5dp" android:background="@drawable/bg_button" android:gravity="center" android:text="⋮  More" android:textColor="@color/decan_white" android:textSize="12sp" android:clickable="true" android:focusable="true" />
    </LinearLayout>
    <LinearLayout android:id="@+id/loadingPanel" android:layout_width="match_parent" android:layout_height="match_parent" android:background="#F5030305" android:gravity="center" android:orientation="vertical" android:visibility="visible">
        <ImageView android:layout_width="92dp" android:layout_height="92dp" android:contentDescription="@string/app_name" android:src="@drawable/ic_decan_atom" />
        <ProgressBar android:layout_width="42dp" android:layout_height="42dp" android:layout_marginTop="18dp" />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12dp" android:text="@string/loading" android:textColor="@color/decan_white" android:textSize="15sp" />
    </LinearLayout>
    <LinearLayout android:id="@+id/errorPanel" android:layout_width="match_parent" android:layout_height="match_parent" android:background="@color/decan_black" android:gravity="center" android:orientation="vertical" android:padding="30dp" android:visibility="gone">
        <ImageView android:layout_width="88dp" android:layout_height="88dp" android:contentDescription="@string/app_name" android:src="@drawable/ic_decan_atom" />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="@string/offline_title" android:textColor="@color/decan_white" android:textSize="24sp" android:textStyle="bold" />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:gravity="center" android:text="@string/offline_message" android:textColor="@color/decan_muted" android:textSize="15sp" />
        <TextView android:id="@+id/retryButton" android:layout_width="180dp" android:layout_height="52dp" android:layout_marginTop="22dp" android:background="@drawable/bg_button" android:gravity="center" android:text="@string/retry" android:textColor="@color/decan_cyan" android:textSize="15sp" android:textStyle="bold" android:clickable="true" android:focusable="true" />
    </LinearLayout>
</FrameLayout>
